# foris

./: .gitignore  Makefile  README.md  manage.py  pyproject.toml  pytest.ini
.github/workflows/: python-app.yml
data/: input2.txt  input3.txt
src/: controllers.py  models.py
tests/: conftest.py
tests/functional/: test_io.py
tests/test_data/: expected_output2.txt  expected_output3.txt  expected_output4.txt  input2.txt  input4.txt
tests/unit/: test_models.py
